--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "build": "tsc -p tsconfig.json",
     "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "test": "vitest"
+    "test": "vitest",
+    "format": "prettier --write ."
   },
-  "keywords": ["pdf", "booklet", "imposition", "cli"],
+  "keywords": [
+    "pdf",
+    "booklet",
+    "imposition",
+    "cli"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -23,6 +29,7 @@
     "@types/node": "^20.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.0",
+    "prettier": "^2.8.0"
   }
 }
