--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "ts-node src/index.ts",
+    "dev": "node -r ts-node/register src/index.ts",
     "start": "node dist/index.js",
     "test": "vitest",
     "format": "prettier --write ."
